adds services and tests